Prevent homepage image from being cutoff

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,4 +58,6 @@ a {
   max-width: 300px;
   max-height: 300px;
   height: 30vw;
+  /* iOS Firefox cuts off the image */
+  margin-top: 20px;
 }
